# alg-fabbri-IPRJ-UERJ-hub

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  GEMINI.md  README.md  combined.json
.github/workflows/: ci.yml
bench/: combined.json  index.html
cmake/: CTestConfig-dowloaded-cdash.cmake  CTestConfig.cmake  cdash_submit.cmake  inject.cmake
scripts/: build-all-forks  get-fork-names  patch-forks  patch-forks-all  run-benchmarks  run-tests  simple_index.html  submit-all-dashboard  submodules-add  submodules-init
